@@ -8,7 +8,4 @@
 	<longdescription>
 	Project Tox, also known as Tox, is a FOSS (Free and Open Source Software) instant messaging application aimed to replace Skype.
 	</longdescription>
-	<use>
-		<flag name="nacl"></flag>
-	</use>
 </pkgmetadata>
